--- a/web/src/main/webapp/WEB-INF/templates/fragments/email/frg_sendEmailModal_CustomerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/email/frg_sendEmailModal_CustomerDetail.html
@@ -1,5 +1,6 @@
 <!-- Modal Gửi Email -->
-<div class="email-modal" id="emailModal">
+<div class="email-modal" id="emailModal"
+		style="max-height: 100vh; overflow-y: auto; padding: 20px;">
 	<div
 		class="email-header d-flex justify-content-between align-items-center">
 		<h5 class="mb-3">Gửi Email</h5>
@@ -44,9 +45,15 @@
 
 		<div class="form-group">
 			<label style="color: gray; width: 80px;">Nội dung:</label>
-			<textarea style="color: black;" id="emailContent"
+			<textarea style="color: black;" id="editor"
 				class="form-control mb-2" name="message" rows="5"
 				placeholder="Nội dung"></textarea>
+		</div>
+		
+		<div class="form-group">
+			  <label for="attachment" class="form-label text-start d-block">Đính kèm tệp:</label>
+			  <input type="file" class="form-control" name="attachments" id="attachment" multiple onchange="previewAttachments()" />
+			  <div id="preview-area" class="mt-2"></div>
 		</div>
 
 		<button class="btn btn-primary w-30" id="sendEmailBtn" type="submit">Gửi</button>
