--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
@@ -28,6 +28,8 @@
 <!-- BEGIN ROBUST JS-->
 <script th:src="@{/resources/app-assets/js/core/app-menu.min.js}"></script>
 <script th:src="@{/resources/app-assets/js/core/app.min.js}"></script>
+<script th:src="@{/resources/app-assets/js/update/trackIdle.js}"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
