--- a/web/src/main/webapp/WEB-INF/templates/fragments/createTask_form.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createTask_form.html
@@ -26,6 +26,12 @@
 	            <label for="startDate" class="form-label">Ngày bắt đầu</label>
 	            <input type="datetime-local" class="form-control" id="startDate" name="startDate">
 	        </div>
+	        
+	        <!-- Ngày kết thúc -->
+	        <div class="form-section">
+	            <label for="dueDate" class="form-label">Ngày kết thúc</label>
+	            <input type="datetime-local" class="form-control" id="dueDate" name="dueDate">
+	        </div>
 	
 	        <!-- Khách hàng liên quan -->
 	        <div class="form-section">
